<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GUI_Draft</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvDmc">Drive My Car</string>
    <string name="etLogin">Login</string>
    <string name="etPassword">Password</string>
    <string name="btnLogin">Log in</string>
    <string name="tvNotYetRegister">Not yet register?</string>
    <string name="btnSignUp">Sign up!</string>
    <string name="title_activity_home">Home</string>

    <!-- custom_details_cars.xml -->
    <string name="tvOwner">Owner </string>
    <string name="tvEditableOwner">Editable Owner</string>
    <string name="tvModel">Model </string>
    <string name="tvEditableModel">Editable Model</string>
    <string name="tvPrice">Price </string>
    <string name="tvEditablePrice">Editable Price</string>
    <string name="tvAvailable">Available </string>
    <string name="tvEditableAvailable">Editable Available</string>
    <string name="title_activity_cars_details_list">Details</string>

    <!-- activity_cars_detail_list -->
    <string name="tvTitleCarDetailsList">Car Brand</string>

    <!-- tab_personnal_space -->
    <string name="tvName">Name</string>
    <string name="tvPseudo">Pseudo</string>
    <string name="tvRanking">Ranking</string>
    <string name="tvEditableRanking">4/100</string>
    <string name="tvSettings">Settings</string>
    <string name="tvLogout">Logout</string>
    <string name="tvMyCar">My car</string>

    <!-- tab_manage -->
    <string name="tvFindACar">Find a car </string>
    <string name="tvManageMyRent">Manage my rents</string>
    <string name="title_activity_search_car">SearchCar</string>

    <!--activity_search_car -->
    <string name="tvBrand">Brand</string>


</resources>
