<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".login"
    android:clickable="true"
    android:background="@drawable/login2">

    <TextView
        android:id="@+id/tvDmc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:text="@string/tvDmc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#663300" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvDmc"
        android:layout_marginTop="50dp"
        android:hint="@string/etLogin" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/etPassword"
        android:layout_below="@+id/etLogin"
        android:layout_marginTop="30dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:onClick="onClickLogin" />

    <TextView
        android:id="@+id/tvNotYetRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/tvNotYetRegister"
        android:layout_below="@+id/btnLogin"
        android:textColor="#663300"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUp"
        android:onClick="onClickSignUp"
        android:layout_below="@+id/tvNotYetRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
